Updating to work with EAP 5.2 as well